# sql

./: CLAUDE.md  Cargo.toml  Justfile  README.md
sql/: Cargo.toml
sql/src/: lib.rs  migrate.rs  schema.rs
sql/src/query/: insert.rs  mod.rs
sql/src/query/select/: expr.rs
sql/src/schema/: column.rs  generated.rs  index.rs  mod.rs  table.rs  type.rs
sql_openapi/: Cargo.toml
sql_openapi/src/: lib.rs
sql_openapi/tests/: integration.rs
sql_sqlx/: Cargo.toml
sql_sqlx/examples/: run.rs
sql_sqlx/src/: lib.rs
sql_sqlx/src/sql/: query_columns.sql  query_constraints.sql  query_functions.sql  query_indices.sql  query_tables.sql  query_triggers.sql
