[workspace]
members = ["sql", "sql_openapi", "sql_sqlx"]
resolver = "3"

[workspace.package]
version = "0.25.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
kurtbuilds_sql = { path = "sql", version = "0.25" }
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
topo_sort = "0.4.0"
tracing = { version = "0.1.40" }
convert_case = "0.8.0"
pretty_assertions = "1"
itertools = "0.14.0"
tokio = { version = "1.47.1", features = ["full"] }
