[package]
name = "kurtbuilds_sql_sqlx"
version.workspace = true
edition.workspace = true
description = "Crate to create sql models from sqlx database (currently just postgres)"
license = "MIT"
repository = "https://github.com/kurtbuilds/sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kurtbuilds_sql.workspace = true
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
anyhow.workspace = true
itertools.workspace = true
