[package]
name = "kurtbuilds_sql_sqlx"
version.workspace = true
edition.workspace = true
description = "Crate to create sql models from sqlx database (currently just postgres)"
license = "MIT"
repository = "https://github.com/kurtbuilds/sql"

[lib]
name = "sql_sqlx"
path = "src/lib.rs"

[dependencies]
kurtbuilds_sql.workspace = true
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
anyhow.workspace = true
itertools.workspace = true
